Attempt to fix phone sizing with word-break on h1

--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ body {
 
 h1 {
     font-size: clamp(1rem, 6vw, 3rem);
+    text-align: center;
+    word-break: keep-all;
 }
 
 h4 {
